Run the train-janelia-... alt neurite stages

--- a/dvc/training/checkpoints-lida-alt-neurites/.gitignore
+++ b/dvc/training/checkpoints-lida-alt-neurites/.gitignore
@@ -34,3 +34,30 @@
 /in-merged-bc-merged-all-cnn-deepwalk-stratified-k-fold
 /in-merged-bc-merged-all-xgb-deepwalk-stratified-k-fold
 /in-merged-bc-merged-basal-decision-tree-tmd-stratified-k-fold
+/janelia-L5-axon-decision-tree-deepwalk-stratified-k-fold
+/janelia-L5-basal-decision-tree-deepwalk-stratified-k-fold
+/janelia-L5-axon-gnn-morphology-stratified-k-fold
+/janelia-L5-basal-xgb-deepwalk-stratified-k-fold
+/janelia-L5-all-cnn-deepwalk-stratified-k-fold
+/janelia-L5-basal-xgb-tmd-stratified-k-fold
+/janelia-L5-axon-decision-tree-tmd-stratified-k-fold
+/janelia-L5-basal-cnn-tmd-stratified-k-fold
+/janelia-L5-basal-gnn-morphology-stratified-k-fold
+/janelia-L5-all-perslay-tmd-stratified-k-fold
+/janelia-L5-axon-perslay-deepwalk-stratified-k-fold
+/janelia-L5-all-xgb-tmd-stratified-k-fold
+/janelia-L5-axon-xgb-tmd-stratified-k-fold
+/janelia-L5-axon-cnn-tmd-stratified-k-fold
+/janelia-L5-all-decision-tree-tmd-stratified-k-fold
+/janelia-L5-all-gnn-morphology-stratified-k-fold
+/janelia-L5-all-perslay-deepwalk-stratified-k-fold
+/janelia-L5-axon-cnn-deepwalk-stratified-k-fold
+/janelia-L5-axon-perslay-tmd-stratified-k-fold
+/janelia-L5-all-xgb-deepwalk-stratified-k-fold
+/janelia-L5-axon-xgb-deepwalk-stratified-k-fold
+/janelia-L5-basal-perslay-tmd-stratified-k-fold
+/janelia-L5-all-cnn-tmd-stratified-k-fold
+/janelia-L5-basal-cnn-deepwalk-stratified-k-fold
+/janelia-L5-basal-decision-tree-tmd-stratified-k-fold
+/janelia-L5-all-decision-tree-deepwalk-stratified-k-fold
+/janelia-L5-basal-perslay-deepwalk-stratified-k-fold
