Run the missing in-merged experiments

--- a/dvc/training/checkpoints-lida-alt-neurites/.gitignore
+++ b/dvc/training/checkpoints-lida-alt-neurites/.gitignore
@@ -61,3 +61,21 @@
 /janelia-L5-basal-decision-tree-tmd-stratified-k-fold
 /janelia-L5-all-decision-tree-deepwalk-stratified-k-fold
 /janelia-L5-basal-perslay-deepwalk-stratified-k-fold
+/in-merged-basal-xgb-deepwalk-stratified-k-fold
+/in-merged-all-cnn-tmd-stratified-k-fold
+/in-merged-all-perslay-tmd-stratified-k-fold
+/in-merged-basal-cnn-deepwalk-stratified-k-fold
+/in-merged-all-perslay-deepwalk-stratified-k-fold
+/in-merged-all-xgb-tmd-stratified-k-fold
+/in-merged-basal-xgb-tmd-stratified-k-fold
+/in-merged-basal-decision-tree-tmd-stratified-k-fold
+/in-merged-basal-perslay-tmd-stratified-k-fold
+/in-merged-all-decision-tree-tmd-stratified-k-fold
+/in-merged-all-decision-tree-deepwalk-stratified-k-fold
+/in-merged-all-xgb-deepwalk-stratified-k-fold
+/in-merged-basal-gnn-morphology-stratified-k-fold
+/in-merged-basal-perslay-deepwalk-stratified-k-fold
+/in-merged-all-gnn-morphology-stratified-k-fold
+/in-merged-basal-decision-tree-deepwalk-stratified-k-fold
+/in-merged-basal-cnn-tmd-stratified-k-fold
+/in-merged-all-cnn-deepwalk-stratified-k-fold
