Add {train,evaluate}-lida-in-merged-... stages (#44)
* Add {train,evaluate}-lida-in-merged-... stages

* Add janelia-L5 stages for alt-neurites

* Run the lida-in-merged/alt-neurites experiments

* Run the train-janelia-... alt neurite stages

* Run the missing in-merged experiments

--- a/dvc/dvc.yaml
+++ b/dvc/dvc.yaml
@@ -2662,6 +2662,60 @@ stages:
       outs:
         - evaluation/checkpoints-lida/in-merged-${key}-stratified-k-fold.html
         - evaluation/checkpoints-lida/in-merged-${key}-stratified-k-fold
+  train-lida-in-merged-all:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v train
+        --features-dir extract-features/lida-in-merged/all/${item.features-rd}
+        --model-config training/configs/model-${item.model}.yaml
+        --splitter-config training/configs/splitter-stratified-k-fold.yaml
+        --checkpoint-dir training/checkpoints-lida-alt-neurites/in-merged-all-${key}-stratified-k-fold
+      deps:
+        - extract-features/lida-in-merged/all/${item.features-rd}
+        - training/configs/model-${item.model}.yaml
+        - training/configs/splitter-stratified-k-fold.yaml
+      outs:
+        - training/checkpoints-lida-alt-neurites/in-merged-all-${key}-stratified-k-fold
+  evaluate-lida-in-merged-all:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v evaluate performance
+        training/checkpoints-lida-alt-neurites/in-merged-all-${key}-stratified-k-fold/checkpoint.chk
+        evaluation/checkpoints-lida-alt-neurites/in-merged-all-${key}-stratified-k-fold.html
+      deps:
+        - training/checkpoints-lida-alt-neurites/in-merged-all-${key}-stratified-k-fold/checkpoint.chk
+      outs:
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-all-${key}-stratified-k-fold.html
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-all-${key}-stratified-k-fold
+  train-lida-in-merged-basal:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v train
+        --features-dir extract-features/lida-in-merged/basal/${item.features-rd}
+        --model-config training/configs/model-${item.model}.yaml
+        --splitter-config training/configs/splitter-stratified-k-fold.yaml
+        --checkpoint-dir training/checkpoints-lida-alt-neurites/in-merged-basal-${key}-stratified-k-fold
+      deps:
+        - extract-features/lida-in-merged/basal/${item.features-rd}
+        - training/configs/model-${item.model}.yaml
+        - training/configs/splitter-stratified-k-fold.yaml
+      outs:
+        - training/checkpoints-lida-alt-neurites/in-merged-basal-${key}-stratified-k-fold
+  evaluate-lida-in-merged-basal:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v evaluate performance
+        training/checkpoints-lida-alt-neurites/in-merged-basal-${key}-stratified-k-fold/checkpoint.chk
+        evaluation/checkpoints-lida-alt-neurites/in-merged-basal-${key}-stratified-k-fold.html
+      deps:
+        - training/checkpoints-lida-alt-neurites/in-merged-basal-${key}-stratified-k-fold/checkpoint.chk
+      outs:
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-basal-${key}-stratified-k-fold.html
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-basal-${key}-stratified-k-fold
   train-lida-in-merged-bc-merged:
     foreach: ${models-and-features}
     do:
@@ -2689,6 +2743,60 @@ stages:
       outs:
         - evaluation/checkpoints-lida/in-merged-bc-merged-${key}-stratified-k-fold.html
         - evaluation/checkpoints-lida/in-merged-bc-merged-${key}-stratified-k-fold
+  train-lida-in-merged-bc-merged-all:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v train
+        --features-dir extract-features/lida-in-merged-bc-merged/all/${item.features-rd}
+        --model-config training/configs/model-${item.model}.yaml
+        --splitter-config training/configs/splitter-stratified-k-fold.yaml
+        --checkpoint-dir training/checkpoints-lida-alt-neurites/in-merged-bc-merged-all-${key}-stratified-k-fold
+      deps:
+        - extract-features/lida-in-merged-bc-merged/all/${item.features-rd}
+        - training/configs/model-${item.model}.yaml
+        - training/configs/splitter-stratified-k-fold.yaml
+      outs:
+        - training/checkpoints-lida-alt-neurites/in-merged-bc-merged-all-${key}-stratified-k-fold
+  evaluate-lida-in-merged-bc-merged-all:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v evaluate performance
+        training/checkpoints-lida-alt-neurites/in-merged-bc-merged-all-${key}-stratified-k-fold/checkpoint.chk
+        evaluation/checkpoints-lida-alt-neurites/in-merged-bc-merged-all-${key}-stratified-k-fold.html
+      deps:
+        - training/checkpoints-lida-alt-neurites/in-merged-bc-merged-all-${key}-stratified-k-fold/checkpoint.chk
+      outs:
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-bc-merged-all-${key}-stratified-k-fold.html
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-bc-merged-all-${key}-stratified-k-fold
+  train-lida-in-merged-bc-merged-basal:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v train
+        --features-dir extract-features/lida-in-merged-bc-merged/basal/${item.features-rd}
+        --model-config training/configs/model-${item.model}.yaml
+        --splitter-config training/configs/splitter-stratified-k-fold.yaml
+        --checkpoint-dir training/checkpoints-lida-alt-neurites/in-merged-bc-merged-basal-${key}-stratified-k-fold
+      deps:
+        - extract-features/lida-in-merged-bc-merged/basal/${item.features-rd}
+        - training/configs/model-${item.model}.yaml
+        - training/configs/splitter-stratified-k-fold.yaml
+      outs:
+        - training/checkpoints-lida-alt-neurites/in-merged-bc-merged-basal-${key}-stratified-k-fold
+  evaluate-lida-in-merged-bc-merged-basal:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v evaluate performance
+        training/checkpoints-lida-alt-neurites/in-merged-bc-merged-basal-${key}-stratified-k-fold/checkpoint.chk
+        evaluation/checkpoints-lida-alt-neurites/in-merged-bc-merged-basal-${key}-stratified-k-fold.html
+      deps:
+        - training/checkpoints-lida-alt-neurites/in-merged-bc-merged-basal-${key}-stratified-k-fold/checkpoint.chk
+      outs:
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-bc-merged-basal-${key}-stratified-k-fold.html
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-bc-merged-basal-${key}-stratified-k-fold
   train-lida-in-merged-no-nbc:
     foreach: ${models-and-features}
     do:
@@ -2716,6 +2824,60 @@ stages:
       outs:
         - evaluation/checkpoints-lida/in-merged-no-nbc-${key}-stratified-k-fold.html
         - evaluation/checkpoints-lida/in-merged-no-nbc-${key}-stratified-k-fold
+  train-lida-in-merged-no-nbc-all:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v train
+        --features-dir extract-features/lida-in-merged-no-nbc/all/${item.features-rd}
+        --model-config training/configs/model-${item.model}.yaml
+        --splitter-config training/configs/splitter-stratified-k-fold.yaml
+        --checkpoint-dir training/checkpoints-lida-alt-neurites/in-merged-no-nbc-all-${key}-stratified-k-fold
+      deps:
+        - extract-features/lida-in-merged-no-nbc/all/${item.features-rd}
+        - training/configs/model-${item.model}.yaml
+        - training/configs/splitter-stratified-k-fold.yaml
+      outs:
+        - training/checkpoints-lida-alt-neurites/in-merged-no-nbc-all-${key}-stratified-k-fold
+  evaluate-lida-in-merged-no-nbc-all:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v evaluate performance
+        training/checkpoints-lida-alt-neurites/in-merged-no-nbc-all-${key}-stratified-k-fold/checkpoint.chk
+        evaluation/checkpoints-lida-alt-neurites/in-merged-no-nbc-all-${key}-stratified-k-fold.html
+      deps:
+        - training/checkpoints-lida-alt-neurites/in-merged-no-nbc-all-${key}-stratified-k-fold/checkpoint.chk
+      outs:
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-no-nbc-all-${key}-stratified-k-fold.html
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-no-nbc-all-${key}-stratified-k-fold
+  train-lida-in-merged-no-nbc-basal:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v train
+        --features-dir extract-features/lida-in-merged-no-nbc/basal/${item.features-rd}
+        --model-config training/configs/model-${item.model}.yaml
+        --splitter-config training/configs/splitter-stratified-k-fold.yaml
+        --checkpoint-dir training/checkpoints-lida-alt-neurites/in-merged-no-nbc-basal-${key}-stratified-k-fold
+      deps:
+        - extract-features/lida-in-merged-no-nbc/basal/${item.features-rd}
+        - training/configs/model-${item.model}.yaml
+        - training/configs/splitter-stratified-k-fold.yaml
+      outs:
+        - training/checkpoints-lida-alt-neurites/in-merged-no-nbc-basal-${key}-stratified-k-fold
+  evaluate-lida-in-merged-no-nbc-basal:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v evaluate performance
+        training/checkpoints-lida-alt-neurites/in-merged-no-nbc-basal-${key}-stratified-k-fold/checkpoint.chk
+        evaluation/checkpoints-lida-alt-neurites/in-merged-no-nbc-basal-${key}-stratified-k-fold.html
+      deps:
+        - training/checkpoints-lida-alt-neurites/in-merged-no-nbc-basal-${key}-stratified-k-fold/checkpoint.chk
+      outs:
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-no-nbc-basal-${key}-stratified-k-fold.html
+        - evaluation/checkpoints-lida-alt-neurites/in-merged-no-nbc-basal-${key}-stratified-k-fold
   train-janelia-L5:
     foreach: ${models-and-features}
     do:
@@ -2743,6 +2905,87 @@ stages:
       outs:
         - evaluation/janelia-L5/${key}-stratified-k-fold.html
         - evaluation/janelia-L5/${key}-stratified-k-fold
+  train-janelia-L5-all:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v train
+        --features-dir extract-features/lida-janelia-L5/all/${item.features-rd}
+        --model-config training/configs/model-${item.model}.yaml
+        --splitter-config training/configs/splitter-stratified-k-fold.yaml
+        --checkpoint-dir training/checkpoints-lida-alt-neurites/janelia-L5-all-${key}-stratified-k-fold
+      deps:
+        - extract-features/lida-janelia-L5/all/${item.features-rd}
+        - training/configs/model-${item.model}.yaml
+        - training/configs/splitter-stratified-k-fold.yaml
+      outs:
+        - training/checkpoints-lida-alt-neurites/janelia-L5-all-${key}-stratified-k-fold
+  evaluate-janelia-L5-all:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v evaluate performance
+        training/checkpoints-lida-alt-neurites/janelia-L5-all-${key}-stratified-k-fold/checkpoint.chk
+        evaluation/checkpoints-lida-alt-neurites/janelia-L5-all-${key}-stratified-k-fold.html
+      deps:
+        - training/checkpoints-lida-alt-neurites/janelia-L5-all-${key}-stratified-k-fold/checkpoint.chk
+      outs:
+        - evaluation/checkpoints-lida-alt-neurites/janelia-L5-all-${key}-stratified-k-fold.html
+        - evaluation/checkpoints-lida-alt-neurites/janelia-L5-all-${key}-stratified-k-fold
+  train-janelia-L5-axon:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v train
+        --features-dir extract-features/lida-janelia-L5/axon/${item.features-rd}
+        --model-config training/configs/model-${item.model}.yaml
+        --splitter-config training/configs/splitter-stratified-k-fold.yaml
+        --checkpoint-dir training/checkpoints-lida-alt-neurites/janelia-L5-axon-${key}-stratified-k-fold
+      deps:
+        - extract-features/lida-janelia-L5/axon/${item.features-rd}
+        - training/configs/model-${item.model}.yaml
+        - training/configs/splitter-stratified-k-fold.yaml
+      outs:
+        - training/checkpoints-lida-alt-neurites/janelia-L5-axon-${key}-stratified-k-fold
+  evaluate-janelia-L5-axon:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v evaluate performance
+        training/checkpoints-lida-alt-neurites/janelia-L5-axon-${key}-stratified-k-fold/checkpoint.chk
+        evaluation/checkpoints-lida-alt-neurites/janelia-L5-axon-${key}-stratified-k-fold.html
+      deps:
+        - training/checkpoints-lida-alt-neurites/janelia-L5-axon-${key}-stratified-k-fold/checkpoint.chk
+      outs:
+        - evaluation/checkpoints-lida-alt-neurites/janelia-L5-axon-${key}-stratified-k-fold.html
+        - evaluation/checkpoints-lida-alt-neurites/janelia-L5-axon-${key}-stratified-k-fold
+  train-janelia-L5-basal:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v train
+        --features-dir extract-features/lida-janelia-L5/basal/${item.features-rd}
+        --model-config training/configs/model-${item.model}.yaml
+        --splitter-config training/configs/splitter-stratified-k-fold.yaml
+        --checkpoint-dir training/checkpoints-lida-alt-neurites/janelia-L5-basal-${key}-stratified-k-fold
+      deps:
+        - extract-features/lida-janelia-L5/basal/${item.features-rd}
+        - training/configs/model-${item.model}.yaml
+        - training/configs/splitter-stratified-k-fold.yaml
+      outs:
+        - training/checkpoints-lida-alt-neurites/janelia-L5-basal-${key}-stratified-k-fold
+  evaluate-janelia-L5-basal:
+    foreach: ${models-and-features}
+    do:
+      cmd: >-
+        morphoclass -v evaluate performance
+        training/checkpoints-lida-alt-neurites/janelia-L5-basal-${key}-stratified-k-fold/checkpoint.chk
+        evaluation/checkpoints-lida-alt-neurites/janelia-L5-basal-${key}-stratified-k-fold.html
+      deps:
+        - training/checkpoints-lida-alt-neurites/janelia-L5-basal-${key}-stratified-k-fold/checkpoint.chk
+      outs:
+        - evaluation/checkpoints-lida-alt-neurites/janelia-L5-basal-${key}-stratified-k-fold.html
+        - evaluation/checkpoints-lida-alt-neurites/janelia-L5-basal-${key}-stratified-k-fold
   morphometrics-feature-extraction:
     foreach:
       - pyramidal-cells
