--- a/dvc/dvc.yaml
+++ b/dvc/dvc.yaml
@@ -16,12 +16,6 @@ stages:
         - data/raw/${item}/neurondb.dat
       outs:
         - data/preprocessed-${item}.csv
-      desc: >-
-        Initial stage of the data prep process, where data is filtered in many ways.
-        This filtering includes dropping duplicate files, dropping M-type classes with
-        only 1 neuron, and other kinds of files sorting and cleanup.
-        Morphologies are not modified, only paths and metadata are filtered and written
-        into a CSV file.
   preprocess-janelia:
     cmd: >
       python data/preprocess-janelia.py
@@ -33,8 +27,7 @@ stages:
       - data/raw/janelia/selected_morphologies.csv
     outs:
       - data/preprocessed-janelia.csv
-    desc: >-
-      Same as 'preprocess-dataset', but for 'janelia' dataset.
+
   plot-dataset-stats:
     foreach:
       - pyramidal-cells
@@ -47,11 +40,6 @@ stages:
       deps:
         - data/preprocessed-${item}.csv
         - data/raw/${item}/morphologies
-      desc: >-
-        Generates pretty dataset summary info: counts per M-type and per layer, average
-        number of nodes per neurite, examples of visualization of morphologies per
-        M-type, ...
-        Note: we do not track the output of this stage, you need to re-run it manually.
   plot-dataset-stats-janelia:
     cmd: >
       morphoclass -v plot-dataset-stats
@@ -60,10 +48,7 @@ stages:
     deps:
       - data/preprocessed-janelia.csv
       - data/raw/janelia/mouselight_isocortex_ASCII_Files
-    desc: >-
-      Same as 'plot-dataset-stats', but for 'janelia' dataset.
-      The output of this stage is not 100% reproducible, due to Jinja, but it is fast.
-      Note: we do not track the output of this stage, you need to re-run it manually.
+
   mcar-curation:
     foreach:
       - pyramidal-cells
@@ -81,10 +66,6 @@ stages:
         - data/mcar-luigi.cfg
       outs:
         - data/mcar-curation/${item}
-      desc:
-        This data prep stage only executes "m-car curation" functions, external
-        to morphoclass. Neuronal morphologies are modified to process and repair
-        artifacts of in-vitro reconstructions.
   mcar-curation-janelia:
     cmd: >
       MCAR_INPUT_CSV_PATH="data/preprocessed-janelia.csv"
@@ -98,8 +79,7 @@ stages:
       - data/mcar-luigi.cfg
     outs:
       - data/mcar-curation/janelia
-    desc: >-
-      Same as 'mcar-curation', but for 'janelia' dataset.
+
   organise-dataset:
     foreach:
       - pyramidal-cells
@@ -114,32 +94,6 @@ stages:
         - data/mcar-curation/${item}
       outs:
         - data/final/${item}
-      desc: >-
-        Final stage of the data prep process. Morphologies are not modified, this stage
-        only organizes and structures in a suitable directory structure the various
-        files containing the neuronal morphologies.
-  transfer-learning:
-    foreach: ${transfer_learning.models}
-    do:
-      cmd: >-
-        morphoclass -v transfer-learning
-        --batch-size '${item.batch_size}'
-        --checkpoint-paths-pretrained '${item.checkpoint_paths_pretrained}'
-        --dataset-name '${item.dataset_name}'
-        --feature-extractor-name '${item.feature_extractor_name}'
-        --input-csv '${item.input_csv}'
-        --model-class '${item.model_class}'
-        --model-params '${item.model_params}'
-        --n-epochs '${item.n_epochs}'
-        --optimizer-class '${item.optimizer_class}'
-        --optimizer-params '${item.optimizer_params}'
-        --results-file '${item.results_file}'
-        --seed '${transfer_learning.shared_parameters.seed}'
-      outs:
-      - ${item.results_file}
-      # - ${item.output_wildcard}
-      desc: >-
-        Work in progress, started by Jelena Banjac.
 
   features-in-L1-diagram-deepwalk-all:
     cmd: morphoclass -v extract-features data/final/interneurons/L1/dataset.csv all
@@ -2106,7 +2060,8 @@ stages:
       outs:
         - evaluation/checkpoints-lida-alt-neurites/janelia-L5-basal-${key}-stratified-k-fold.html
         - evaluation/checkpoints-lida-alt-neurites/janelia-L5-basal-${key}-stratified-k-fold
-  morphometrics-feature-extraction:
+
+  features-morphometrics:
     foreach:
       - pyramidal-cells
       - interneurons
@@ -2115,10 +2070,10 @@ stages:
       cmd: >-
         morphoclass -vv morphometrics extract-features
         --organised-dataset-directory ./data/final/${item}
-        --morphometrics-config ./morphometrics/morphometrics_config.yaml
-        --output-features-directory ./morphometrics/features/${item}
+        --morphometrics-config ./extract-features-morphometrics/morphometrics_config.yaml
+        --output-features-directory ./extract-features-morphometrics/${item}
       outs:
-        - morphometrics/features/${item}
+        - extract-features-morphometrics/${item}
       desc: "Extract morphometric features (tabular data) from input neurons."
 
   train-morphometrics:
@@ -2137,3 +2092,26 @@ stages:
       outs:
         - training/checkpoints-morphometrics/${key}
       desc: "Train M-type classifier with morphometric input features (tabular data)"
+
+  transfer-learning:
+    foreach: ${transfer_learning.models}
+    do:
+      cmd: >-
+        morphoclass -v transfer-learning
+        --batch-size '${item.batch_size}'
+        --checkpoint-paths-pretrained '${item.checkpoint_paths_pretrained}'
+        --dataset-name '${item.dataset_name}'
+        --feature-extractor-name '${item.feature_extractor_name}'
+        --input-csv '${item.input_csv}'
+        --model-class '${item.model_class}'
+        --model-params '${item.model_params}'
+        --n-epochs '${item.n_epochs}'
+        --optimizer-class '${item.optimizer_class}'
+        --optimizer-params '${item.optimizer_params}'
+        --results-file '${item.results_file}'
+        --seed '${transfer_learning.shared_parameters.seed}'
+      outs:
+      - ${item.results_file}
+      # - ${item.output_wildcard}
+      desc: >-
+        Work in progress, started by Jelena Banjac.
