--- a/dvc/params.yaml
+++ b/dvc/params.yaml
@@ -1283,37 +1283,37 @@ transfer_learning:  # potentially outdated, review dvc.yaml/the CLI and maybe de
 features-morphometrics:
   in-L1:
     dataset-csv: interneurons/L1/dataset.csv
-    output-features-directory: interneurons/L1
+    output-features-directory: in-L1
   in-L23:
     dataset-csv: interneurons/L23/dataset.csv
-    output-features-directory: interneurons/L23
+    output-features-directory: in-L23
   in-L4:
     dataset-csv: interneurons/L4/dataset.csv
-    output-features-directory: interneurons/L4
+    output-features-directory: in-L4
   in-L5:
     dataset-csv: interneurons/L5/dataset.csv
-    output-features-directory: interneurons/L5
+    output-features-directory: in-L5
   in-L6:
     dataset-csv: interneurons/L6/dataset.csv
-    output-features-directory: interneurons/L6
+    output-features-directory: in-L6
   pc-L2:
     dataset-csv: pyramidal-cells/L2/dataset.csv
-    output-features-directory: pyramidal-cells/L2
+    output-features-directory: pc-L2
   pc-L3:
     dataset-csv: pyramidal-cells/L3/dataset.csv
-    output-features-directory: pyramidal-cells/L3
+    output-features-directory: pc-L3
   pc-L4:
     dataset-csv: pyramidal-cells/L4/dataset.csv
-    output-features-directory: pyramidal-cells/L4
+    output-features-directory: pc-L4
   pc-L5:
     dataset-csv: pyramidal-cells/L5/dataset.csv
-    output-features-directory: pyramidal-cells/L5
+    output-features-directory: pc-L5
   pc-L6:
     dataset-csv: pyramidal-cells/L6/dataset.csv
-    output-features-directory: pyramidal-cells/L6
+    output-features-directory: pc-L6
   janelia-L5:
       dataset-csv: classes-janelia-L5.csv
-      output-features-directory: janelia/L5
+      output-features-directory: janelia-L5
   in-merged:
     dataset-csv: IN_data.csv
     output-features-directory: in-merged
@@ -1323,54 +1323,54 @@ features-morphometrics:
 
 training-morphometrics:
   in-L1-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/interneurons/L1/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L1/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   in-L23-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/interneurons/L23/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L23/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   in-L4-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/interneurons/L4/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L4/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   in-L5-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/interneurons/L5/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L5/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   in-L6-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/interneurons/L6/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L6/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   janelia-L5-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/janelia/L5/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/janelia-L5/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   pc-L2-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pyramidal-cells/L2/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L2/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   pc-L3-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pyramidal-cells/L3/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L3/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   pc-L4-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pyramidal-cells/L4/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L4/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   pc-L5-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pyramidal-cells/L5/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L5/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   pc-L6-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pyramidal-cells/L6/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L6/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   in-merged-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pyramidal-cells/in-merged/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
   in-merged-bc-merged-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pyramidal-cells/in-merged-bc-merged/dataset.csv
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged-bc-merged/dataset.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
