--- a/requirements-extras.txt
+++ b/requirements-extras.txt
@@ -4,7 +4,7 @@ sphinx-bluebrain-theme==0.2.9
 sphinx-rtd-theme==1.0.0
 
 # --- dev ---
-dvc==2.10.2
+dvc[ssh]==2.10.2
 pre-commit==2.19.0
 pytest==7.1.2
 pytest-cov==3.0.0
