--- a/dvc/extract-features-morphometrics/.gitignore
+++ b/dvc/extract-features-morphometrics/.gitignore
@@ -1,3 +1,14 @@
-/pyramidal-cells
-/janelia
-/interneurons
+/in-L1
+/in-L23
+/in-L4
+/in-L5
+/in-L6
+/in-merged
+/in-merged-bc-merged
+/janelia-L5
+/pc-L2
+/pc-L3
+/pc-L4
+/pc-L5
+/pc-L6
+
