--- a/dvc/params.yaml
+++ b/dvc/params.yaml
@@ -1281,96 +1281,109 @@ transfer_learning:  # potentially outdated, review dvc.yaml/the CLI and maybe de
     seed: 113587
 
 features-morphometrics:
-  in-L1:
+  in-L1-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: interneurons/L1/dataset.csv
-    output-features-directory: in-L1
-  in-L23:
+    output-features-directory: in-L1/all
+  in-L23-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: interneurons/L23/dataset.csv
-    output-features-directory: in-L23
-  in-L4:
+    output-features-directory: in-L23/all
+  in-L4-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: interneurons/L4/dataset.csv
-    output-features-directory: in-L4
-  in-L5:
+    output-features-directory: in-L4/all
+  in-L5-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: interneurons/L5/dataset.csv
-    output-features-directory: in-L5
-  in-L6:
+    output-features-directory: in-L5/all
+  in-L6-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: interneurons/L6/dataset.csv
-    output-features-directory: in-L6
-  pc-L2:
+    output-features-directory: in-L6/all
+  pc-L2-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: pyramidal-cells/L2/dataset.csv
-    output-features-directory: pc-L2
-  pc-L3:
+    output-features-directory: pc-L2/all
+  pc-L3-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: pyramidal-cells/L3/dataset.csv
-    output-features-directory: pc-L3
-  pc-L4:
+    output-features-directory: pc-L3/all
+  pc-L4-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: pyramidal-cells/L4/dataset.csv
-    output-features-directory: pc-L4
-  pc-L5:
+    output-features-directory: pc-L4/all
+  pc-L5-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: pyramidal-cells/L5/dataset.csv
-    output-features-directory: pc-L5
-  pc-L6:
+    output-features-directory: pc-L5/all
+  pc-L6-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: pyramidal-cells/L6/dataset.csv
-    output-features-directory: pc-L6
-  janelia-L5:
-      dataset-csv: classes-janelia-L5.csv
-      output-features-directory: janelia-L5
-  in-merged:
+    output-features-directory: pc-L6/all
+  janelia-L5-all:
+    morphometrics-config: morphometrics_config_all.yaml
+    dataset-csv: classes-janelia-L5.csv
+    output-features-directory: janelia-L5/all
+  in-merged-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: IN_data.csv
-    output-features-directory: in-merged
-  in-merged-bc-merged:
+    output-features-directory: in-merged/all
+  in-merged-bc-merged-all:
+    morphometrics-config: morphometrics_config_all.yaml
     dataset-csv: IN_data_BC_merged.csv
-    output-features-directory: in-merged-bc-merged
+    output-features-directory: in-merged-bc-merged/all
 
 training-morphometrics:
-  in-L1-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/in-L1/features.csv
+  in-L1-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L1/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  in-L23-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/in-L23/features.csv
+  in-L23-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L23/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  in-L4-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/in-L4/features.csv
+  in-L4-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L4/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  in-L5-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/in-L5/features.csv
+  in-L5-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L5/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  in-L6-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/in-L6/features.csv
+  in-L6-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-L6/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  janelia-L5-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/janelia-L5/features.csv
+  janelia-L5-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/janelia-L5/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  pc-L2-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pc-L2/features.csv
+  pc-L2-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L2/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  pc-L3-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pc-L3/features.csv
+  pc-L3-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L3/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  pc-L4-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pc-L4/features.csv
+  pc-L4-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L4/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  pc-L5-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pc-L5/features.csv
+  pc-L5-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L5/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  pc-L6-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/pc-L6/features.csv
+  pc-L6-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/pc-L6/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  in-merged-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/in-merged/features.csv
+  in-merged-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
-  in-merged-bc-merged-morphometrics-xgb-stratified-k-fold:
-    morphometrics-features-dir: ./extract-features-morphometrics/in-merged-bc-merged/features.csv
+  in-merged-bc-merged-all-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./extract-features-morphometrics/in-merged-bc-merged/all/features.csv
     model-config: training/configs/model-xgb.yaml
     splitter-config: training/configs/splitter-stratified-k-fold.yaml
